--- a/packages/ui-kit/lib/assets/css/tailwind.css
+++ b/packages/ui-kit/lib/assets/css/tailwind.css
@@ -12,23 +12,38 @@
   --font-figtree: 'Figtree', sans-serif;
 
   /* Breakpoints */
-  --breakpoint-sm: 40rem;     /* 640px */
-  --breakpoint-md: 48rem;     /* 768px */
-  --breakpoint-lg: 64rem;     /* 1024px */
-  --breakpoint-xl: 80rem;     /* 1280px */
+  --breakpoint-sm: 40rem;
+  /* 640px */
+  --breakpoint-md: 48rem;
+  /* 768px */
+  --breakpoint-lg: 64rem;
+  /* 1024px */
+  --breakpoint-xl: 80rem;
+  /* 1280px */
   --breakpoint-2xl: 96rem;
 
-  --text-2xs: 0.625rem;   /* 10px */
-  --text-xs: 0.75rem;     /* 12px */
-  --text-sm: 0.875rem;    /* 14px */
-  --text-md: 1rem;        /* 16px */
-  --text-lg: 1.125rem;    /* 18px */
-  --text-xl: 1.25rem;     /* 20px */
-  --text-2xl: 1.625rem;   /* 26px */
-  --text-3xl: 2rem;       /* 32px */
-  --text-mega: 2.5rem;    /* 40px */
-  --text-4xl: 3rem;       /* 48px */
-  --text-5xl: 4rem;       /* 64px */
+  --text-2xs: 0.625rem;
+  /* 10px */
+  --text-xs: 0.75rem;
+  /* 12px */
+  --text-sm: 0.875rem;
+  /* 14px */
+  --text-md: 1rem;
+  /* 16px */
+  --text-lg: 1.125rem;
+  /* 18px */
+  --text-xl: 1.25rem;
+  /* 20px */
+  --text-2xl: 1.625rem;
+  /* 26px */
+  --text-3xl: 2rem;
+  /* 32px */
+  --text-mega: 2.5rem;
+  /* 40px */
+  --text-4xl: 3rem;
+  /* 48px */
+  --text-5xl: 4rem;
+  /* 64px */
 
 
   --radius-small: var(--radius-small);
@@ -166,7 +181,7 @@
     color: var(--color-text-primary);
     @apply text-3xl md:text-4xl
   }
-  
+
   h2 {
     font-weight: var(--font-weight-important);
     line-height: 100%;
@@ -204,7 +219,7 @@
     color: var(--color-text-primary);
     @apply text-sm md:text-md
   }
-  
+
 }
 
 .theme-just-do-ad {
@@ -311,13 +326,13 @@
   --font-weight-h1: var(--font-weight-important);
   --font-weight-h3: var(--font-weight-important);
   --font-weight-h5: var(--font-weight-important);
-    font-family: var(--font-nunito);
+  font-family: var(--font-nunito);
   --ag-font-family: var(--font-nunito);
-    --ag-background-color: var(--color-card-fill);
+  --ag-background-color: var(--color-card-fill);
   --ag-foreground-color: var(--color-text-primary);
   --ag-header-background-color: var(--color-card-fill);
   --ag-accent-color: var(--color-base-brand-500);
-  --ag-header-text-color: var(--color-text-secondary) ;
+  --ag-header-text-color: var(--color-text-secondary);
   --ag-header-font-weight: 700;
 }
 
@@ -446,7 +461,7 @@
   --ag-foreground-color: var(--color-text-primary);
   --ag-header-background-color: var(--color-card-fill);
   --ag-accent-color: var(--color-base-brand-500);
-  --ag-header-text-color: var(--color-text-secondary) ;
+  --ag-header-text-color: var(--color-text-secondary);
   --ag-header-font-weight: 700;
 }
 
@@ -571,11 +586,11 @@
   --font-weight-h5: 400;
   font-family: var(--font-raleway);
   --ag-font-family: var(--font-raleway);
-    --ag-background-color: var(--color-card-fill);
+  --ag-background-color: var(--color-card-fill);
   --ag-foreground-color: var(--color-text-primary);
   --ag-header-background-color: var(--color-card-fill);
   --ag-accent-color: var(--color-base-brand-500);
-  --ag-header-text-color: var(--color-text-secondary) ;
+  --ag-header-text-color: var(--color-text-secondary);
   --ag-header-font-weight: 700;
 }
 
@@ -695,11 +710,11 @@
   --font-weight-h5: var(--font-weight-important);
   font-family: var(--font-figtree);
   --ag-font-family: var(--font-figtree);
-    --ag-background-color: var(--color-card-fill);
+  --ag-background-color: var(--color-card-fill);
   --ag-foreground-color: var(--color-text-primary);
   --ag-header-background-color: var(--color-card-fill);
   --ag-accent-color: var(--color-base-brand-500);
-  --ag-header-text-color: var(--color-text-secondary) ;
+  --ag-header-text-color: var(--color-text-secondary);
   --ag-header-font-weight: 700;
 }
 
@@ -718,7 +733,9 @@
 }
 
 .ag-root-wrapper {
-  padding: 0 0.75rem; /* Horizontal padding for cells which includes their borders */
-  border-bottom-left-radius: 0!important; /* No rounding of the bottom border for pagination panel integration */
-  border-bottom-right-radius: 0!important;
+  padding: 0 0.75rem;
+  /* Horizontal padding for cells which includes their borders */
+  border-bottom-left-radius: 0 !important;
+  /* No rounding of the bottom border for pagination panel integration */
+  border-bottom-right-radius: 0 !important;
 }
